Legge required til dynamisk skjema

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 			<div id="epost" class="flex-column">
 				<label for="epost-input">E-post</label>
-				<input id="epost-input" name="epost" />
+				<input id="epost-input" name="epost" type="email" />
 			</div>
 			<div id="passord" class="flex-column">
 				<label for="passord-input">Passord</label>
